--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@rainbow-me/rainbowkit": "^1.1.3",
     "axios": "^1.3.4",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
-    "ethers": "^5.7.2",
+    "dotenv": "^16.4.5",
+    "erc721a": "^4.3.0",
+    "ethers": "^6.13.4",
     "express": "^4.18.1",
     "font-awesome": "^4.7.0",
     "form-data": "^4.0.0",
@@ -36,6 +39,8 @@
     "next": "13.4.7",
     "node-html-parser": "^5.3.3",
     "nodemailer": "^6.7.5",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
@@ -47,12 +52,9 @@
     "react-timer-hook": "^3.0.5",
     "react-toastify": "^9.1.1",
     "recharts": "^2.1.10",
+    "request": "^2.88.2",
     "rpc-websockets": "^7.5.1",
     "rsuite": "^5.16.1",
-    "fs": "^0.0.1-security",
-    "os": "^0.1.2",
-    "path": "^0.12.7",
-    "request": "^2.88.2",
     "sass": "^1.52.1",
     "siwe": "^2.1.4",
     "slick-carousel": "^1.8.1",
@@ -66,6 +68,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "hardhat": "^2.22.14",
     "nodemon": "^2.0.16",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
