--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,3 +28,12 @@ jobs:
         cache: 'yarn'
     - run: yarn install
 
+    - name: Run Linter
+      run: yarn lint # Ensure you have a lint script in your package.json
+
+    - name: Build Project
+      run: yarn build # Ensure you have a build script in your package.json
+
+    - name: Run Tests
+      run: yarn test # Ensure you have a test script in your package.json
+
