--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "styled-components": "^5.3.5",
     "tailwind-gradient-mask-image": "^1.0.0",
     "tailwindcss-border-gradient-radius": "^3.0.1",
+    "thirdweb": "^5.63.2",
     "tw-elements": "^1.0.0-alpha12",
     "viem": "^1.4.2",
     "wagmi": "^1.4.5"
